# artifacts/api-server/src/routes/index.ts
@@ -1,10 +1,12 @@
 import { Router, type IRouter } from "express";
 import healthRouter from "./health";
 import gamesRouter from "./games";
+import authRouter from "./auth";
 
 const router: IRouter = Router();
 
 router.use(healthRouter);
 router.use(gamesRouter);
+router.use(authRouter);
 
 export default router;
